css correction in train checkout page alignment correction in week days display

--- a/src/app/train/trains-traveller/travellers.component.scss
+++ b/src/app/train/trains-traveller/travellers.component.scss
@@ -183,14 +183,14 @@
 }
 
 .daily_chart{
-    margin-top: 20px;
+    margin-top: 5px;
      span {
         font-size: 14px;
         line-height: 1.33;
         font-weight: 600;
         letter-spacing: normal;
         color: #888888;
-        padding-right: 10px;
+        padding-right: 6px;
         &:last-child {
             padding-right: 0;
         }
